[gd_scene load_steps=22 format=3 uid="uid://b68sr7av2rrka"]

[ext_resource type="Script" path="res://Intro.gd" id="1_dh76d"]
[ext_resource type="Script" path="res://Label1.gd" id="2_ht3xe"]
[ext_resource type="Script" path="res://HBoxContainer.gd" id="2_ntwk6"]
[ext_resource type="Script" path="res://Label2.gd" id="3_m6log"]
[ext_resource type="Script" path="res://Label3.gd" id="4_uxode"]
[ext_resource type="Script" path="res://Label4.gd" id="5_ui31c"]
[ext_resource type="PackedScene" uid="uid://osne576drmo4" path="res://character.tscn" id="6_8hlv8"]
[ext_resource type="Texture2D" uid="uid://3e2yklefo47s" path="res://circle.png" id="7_w7esg"]

[sub_resource type="Animation" id="Animation_lqqb1"]
resource_name = "playerSelect"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xucrj"]
_data = {
"playerSelect": SubResource("Animation_lqqb1")
}

[sub_resource type="Animation" id="Animation_l0v2r"]
resource_name = "playerSelect"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wfvky"]
_data = {
"playerSelect": SubResource("Animation_l0v2r")
}

[sub_resource type="Animation" id="Animation_1qfp2"]
resource_name = "playerSelect"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2nqgc"]
_data = {
"playerSelect": SubResource("Animation_1qfp2")
}

[sub_resource type="Animation" id="Animation_1bdyc"]
resource_name = "playerSelect"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.523599, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mua3r"]
_data = {
"playerSelect": SubResource("Animation_1bdyc")
}

[sub_resource type="Animation" id="Animation_1t5nt"]
resource_name = "selected"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_udyio"]
_data = {
"selected": SubResource("Animation_1t5nt")
}

[sub_resource type="LabelSettings" id="LabelSettings_8m82a"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sotgb"]
font_color = Color(0.843137, 0.94902, 1, 1)

[sub_resource type="LabelSettings" id="LabelSettings_il16c"]
font_size = 19
font_color = Color(0.0823529, 0.847059, 0, 1)

[node name="Intro" type="Node"]
script = ExtResource("1_dh76d")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.168627, 0.196078, 0.27451, 1)

[node name="Label1" type="Label" parent="."]
offset_left = 256.0
offset_top = 184.0
offset_right = 266.0
offset_bottom = 210.0
pivot_offset = Vector2(5, 13)
text = "1"
script = ExtResource("2_ht3xe")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label1"]
libraries = {
"": SubResource("AnimationLibrary_xucrj")
}

[node name="Label2" type="Label" parent="."]
offset_left = 384.0
offset_top = 184.0
offset_right = 394.0
offset_bottom = 210.0
pivot_offset = Vector2(5, 13)
text = "2"
script = ExtResource("3_m6log")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label2"]
libraries = {
"": SubResource("AnimationLibrary_wfvky")
}

[node name="Label3" type="Label" parent="."]
offset_left = 512.0
offset_top = 184.0
offset_right = 522.0
offset_bottom = 210.0
pivot_offset = Vector2(5, 13)
text = "3"
script = ExtResource("4_uxode")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label3"]
libraries = {
"": SubResource("AnimationLibrary_2nqgc")
}

[node name="Label4" type="Label" parent="."]
offset_left = 650.0
offset_top = 184.0
offset_right = 660.0
offset_bottom = 210.0
pivot_offset = Vector2(5, 13)
text = "4"
script = ExtResource("5_ui31c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label4"]
libraries = {
"": SubResource("AnimationLibrary_mua3r")
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 261.0
offset_top = 410.0
offset_right = 874.0
offset_bottom = 450.0
theme_override_constants/separation = 150
script = ExtResource("2_ntwk6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="HBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_udyio")
}

[node name="routeUpload" type="Label" parent="."]
offset_left = 22.0
offset_top = 11.0
offset_right = 383.0
offset_bottom = 37.0
text = "press esc to add new music"
label_settings = SubResource("LabelSettings_8m82a")

[node name="Instuctions" type="Label" parent="."]
offset_left = 316.0
offset_top = 354.0
offset_right = 649.0
offset_bottom = 432.0
text = "Who will be playing along?
Just press your button, when your
number turns green then you are set to go!"
label_settings = SubResource("LabelSettings_sotgb")
horizontal_alignment = 2

[node name="Start" type="Label" parent="."]
offset_left = 254.0
offset_top = 104.0
offset_right = 655.0
offset_bottom = 136.0
text = "press the green button when you are ready"
label_settings = SubResource("LabelSettings_il16c")

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 619.0
offset_top = 194.0
offset_right = 1104.0
offset_bottom = 632.0
texture = ExtResource("7_w7esg")

[node name="Character" parent="." instance=ExtResource("6_8hlv8")]
position = Vector2(865, 408)
